Fixes to dependencies